[FIX] *: wrap negated variables with parenthesis
* web_dashboard

Tricky difference between LESS and SCSS:
`0 -$var` will be one value in SCSS (the result of 0 - $var) but
two space-separated values in LESS.

See https://github.com/odoo/odoo/commit/cd2504c75fb7afeca2388925c4e790cda94ceeeb

--- a/web_dashboard/static/src/scss/dashboard_view.scss
+++ b/web_dashboard/static/src/scss/dashboard_view.scss
@@ -131,7 +131,7 @@ $o-dashboard-lg-screen: $o-screen-sidechatter-min;
 
     .o_graph_buttons, .o_pivot_buttons {
         padding: $padding-small $padding;
-        margin: -$padding -$padding $padding-small -$padding;
+        margin: (-$padding) (-$padding) $padding-small (-$padding);
         border-bottom: 1px solid $gray-lighter-darker;
     }
 
